Добавил сущность Account, сервис и контроллер для нее
